helm/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: PROJECT_NAME-alb
spec:
  controllerName: gateway.k8s.aws/alb
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: PROJECT_NAME-gateway
  namespace: PROJECT_NAME-system
spec:
  gatewayClassName: openclaw-alb
  infrastructure:
    parametersRef:
      kind: LoadBalancerConfiguration
      name: PROJECT_NAME-lb-config
      group: gateway.k8s.aws
  listeners:
    - name: https
      hostname: "DOMAIN"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
